Update favorite-city.html title and add alt text to image

--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mogadishu</title>
 </head>
 
 <body>
     <h1>Mogadishu</h1>
-    <p>Mogadishu is the capital city of Somalia. After long difficulties it is now recovering. It is where i grew up.
+    <p>Mogadishu is the capital city of Somalia. After long difficulties, it is now recovering. It is where I grew up.
     </p>
-    <img src="images/Mogaa.jpg">
+
+    <img src="images/Mogaa.jpg" alt="A view of Mogadishu">
 </body>
 
 </html>
