--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Burhan | WDD 130</title>
+    <meta name="description"
+        content="Welcome to Burhan's Tour Guide Homepage — explore Kenya and discover amazing destinations.">
+    <meta name="author" content="Burhan">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav aria-label="Main navigation">
+            <ul>
+                <li><a href="#" title="Go to Home Page">Home</a></li>
+                <li><a href="wwr/index.html" title="Visit My Tour Guide Homepage">My Tour Guide Homepage</a></li>
+                <li><a href="wwr/site-plan-burhan.html"
+                        title="View the Site Plan for Burhan's Tour Guide Homepage">Burhan's Site Plan</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Burhan | WDD 130</h1>
+        <figure>
+            <img src="images/Burhan.jpg" alt="A photo of Burhan Looking at the right side" width="300">
+            <figcaption>Burhan – Your friendly local tour guide</figcaption>
+        </figure>
+        <p>Hello! My name is Burhan, and this is my Tour Guide Homepage. I’m passionate about helping visitors explore
+            the natural beauty and culture of Kenya.</p>
+    </main>
+
+    <aside>
+        <h2>About Kenya</h2>
+        <figure>
+            <img src="images/Kenya.jpg" alt="A scenic view of Kenya’s landscape">
+            <figcaption>Kenya’s breathtaking landscape and wildlife</figcaption>
+        </figure>
+        <p>
+            Kenya is a country in East Africa with a coastline on the Indian Ocean. It features savannahs, lakelands,
+            the dramatic Great Rift Valley, and mountain highlands.
+            It is also home to incredible wildlife like lions, elephants, and rhinos. Kenya's capital city is Nairobi.
+        </p>
+    </aside>
+
+    <footer>
+        <p>&copy; <span id="year"></span> @2025 Burhan’s Tour Guide Homepage. All rights reserved.</p>
+    </footer>
+
 </body>
+
 </html>
