--- a/index.html
+++ b/index.html
@@ -5,51 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burhan | WDD 130</title>
-    <meta name="description"
-        content="Welcome to Burhan's Tour Guide Homepage — explore Kenya and discover amazing destinations.">
+    <meta name="description" content="Welcome to Burhan's Tour Guide Homepage — explore Kenya and discover amazing destinations.">
     <meta name="author" content="Burhan">
     <link rel="stylesheet" href="styles/styles.css">
-</head>
+</head> 
 
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="wwr/index.html">My Tour Guide Homepage</a></li>
-                <li><a href="wwr/site-plan-burhan.html">Burhan's Site Plan</a></li>
-            </ul>
+            <a href="#">Home</a>
+            <a href="wwr/">My Tour Guide Homepage</a>
         </nav>
     </header>
-
+    <!-- Welcoming section -->
     <main>
         <h1>Welcome to Burhan's Tour Guide Homepage</h1>
-        <img src="images/Burhan.jpg" alt="Burhan smiling in front of a scenic view in Kenya">
+        <img src="images/burhan.jpg" alt="Hello, I am Burhan" width="267">  
+
         <p>
             Hello! My name is Burhan, and this is my Tour Guide Homepage. I’m passionate about helping visitors explore
             the natural beauty and vibrant culture of Kenya. Through my tours, you’ll experience breathtaking
-            landscapes,
-            friendly communities, and unforgettable adventures.
+            landscapes, friendly communities, and unforgettable adventures.
         </p>
     </main>
-
+    <!-- Image section -->
     <aside>
         <h2>Kenya</h2>
-        <img src="images/Kenya.jpg" alt="A scenic view of Kenya’s savannah landscape">
-        <p>
-            Kenya is a country in East Africa with a coastline on the Indian Ocean. It features savannahs, lakelands,
+        <img src="images/kenya.jpg" alt="A scenic view of Kenya’s savannah landscape">
+        <p>Kenya is a country in East Africa with a coastline on the Indian Ocean. It features savannahs, lakelands,
             the dramatic Great Rift Valley, and mountain highlands. Kenya is home to incredible wildlife such as lions,
-            elephants, and rhinos. The capital city is Nairobi.
-        </p>
+            elephants, and rhinos. The capital city is Nairobi.</p>
     </aside>
 
     <footer>
-        <p>&copy; <span id="year"></span> Burhan’s Tour Guide Homepage. All rights reserved.</p>
+        <p>
+            &copy; 2025 Burhan’s Tour Guide Homepage. All rights reserved.
+        </p>
     </footer>
 
-    <script>
-        document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
 </body>
 
 </html>
