Correction3 WDD130 Week02

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Welcoming section -->
     <main>
         <h1>Welcome to Burhan's Tour Guide Homepage</h1>
-        <img src="images/burhan.jpg" alt="Hello, I am Burhan" width="267">  
+        <img src="images/burhan.jpg" alt="Hello, I am Burhan">  
 
         <p>
             Hello! My name is Burhan, and this is my Tour Guide Homepage. I’m passionate about helping visitors explore
