--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burhan | WDD 130</title>
-    <meta name="description" content="Welcome to Burhan's Tour Guide Homepage — explore Kenya and discover amazing destinations.">
+    <meta name="description"
+        content="Welcome to Burhan's Tour Guide Homepage — explore Kenya and discover amazing destinations.">
     <meta name="author" content="Burhan">
     <link rel="stylesheet" href="styles/styles.css">
 </head> 
