--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burhan | WDD 130</title>
-    <meta name="description"
-        content="Welcome to Burhan's Tour Guide Homepage — explore Kenya and discover amazing destinations.">
-    <meta name="author" content="Burhan">
+    <meta name="description" content="Welcome to My Tour Guide Homepage — WDD 130.">
+    <meta name="author" content="biikole">
     <link rel="stylesheet" href="styles/styles.css">
-</head> 
+</head>
 
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">My Tour Guide Homepage</a>
+            <a href="wwr/">Home, Rafting Website</a>
         </nav>
     </header>
     <!-- Welcoming section -->
     <main>
         <h1>Welcome to Burhan's Tour Guide Homepage</h1>
-        <img src="images/burhan.jpg" alt="Hello, I am Burhan">  
+        <img src="images/burhan.jpg" alt="Hello, I am Burhan">
 
         <p>
             Hello! My name is Burhan, and this is my Tour Guide Homepage. I’m passionate about helping visitors explore
