--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burhan | WDD 130</title>
-    <meta name="description" content="Welcome to My Tour Guide Homepage — WDD 130.">
-    <meta name="author" content="biikole">
+    <meta name="description" content="Burhan, WDD 130 Homepage">
+    <meta name="author" content="Burhan">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
